syntax = "proto3";

package emre;

option go_package = "github.com/yunuseskisan/touch/service.rpc.assets/proto;assetsproto";

import "google/protobuf/timestamp.proto";

message Asset {
  string id = 1;

  google.protobuf.Timestamp created_at = 2;

  google.protobuf.Timestamp updated_at = 3;

  string user_id = 4;

  AssetType type = 5;

  int32 units = 6;
}

enum AssetType {
  ASSET_TYPE_UNKNOWN = 0;

  ASSET_TYPE_IE00B52L4369 = 1;

  ASSET_TYPE_GB00BQ1YHQ70 = 2;

  ASSET_TYPE_GB00B3X7QG63 = 3;

  ASSET_TYPE_GB00BG0QP828 = 4;

  ASSET_TYPE_GB00BPN5P238 = 5;

  ASSET_TYPE_IE00B1S74Q32 = 6;
}